--- a/tumblingtoads/src/index.css
+++ b/tumblingtoads/src/index.css
@@ -1,5 +1,11 @@
+* {
+  box-sizing: border-box 
+}
+
 body {
   margin: 0;
+  box-sizing: border-box;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,17 +19,55 @@ code {
     monospace;
 }
  
-.sidebar {
-  width: 25%;
-  position: fixed;
-  padding: 2%;
+.site-title
+{
+  color: gray;
+  display: inline-block;
+  width: 50%;
+  padding-left: 20%;
+  align-self: center;
+}
+
+.topbar {
+  width: 100%;
+  height: 3%;
+  max-height: 80px;
+  margin: 0%;
+  background-color: aliceblue;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: stretch;
+  row-gap: 30px;
+}
+
+.dropdown {
+  align-self: center;
+  width: 50%;
+  padding-left: 20%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 260px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  text-align: left;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 .blog-content {
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 5%;
-  position: absolute;
+  margin-top: 3%;
+  width:70%;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .blog-content-tags {
