--- a/tumblingtoads/src/index.css
+++ b/tumblingtoads/src/index.css
@@ -63,7 +63,7 @@ code {
 }
 
 .blog-content {
-  margin-top: 3%;
+  margin-top: 5%;
   width:70%;
   max-width: 600px;
   margin-left: auto;
@@ -77,4 +77,65 @@ code {
   margin-right: 10px;
   display: block;
   margin-top: 40px;
+}
+
+.blog-preview-container
+{
+  display: flex;
+  flex-direction: row;
+  margin-top: 2%;
+  border-bottom: 3px solid aliceblue;
+  padding: 1%;
+}
+
+.blog-preview-container:hover
+{
+  cursor: pointer;
+}
+
+
+.blog-preview-thumbnail
+{
+  width: 23%;
+  max-width: 100px;
+  aspect-ratio: 1 / 1;  /* defining the aspect ratio of the image */
+  object-fit: cover;
+  align-self: center;
+}
+
+.blog-preview-metadata
+{
+  width: 70%;
+  align-self: flex-start;
+  padding: 7%;
+}
+
+.blog-preview-metadata-date
+{
+  font-size: smaller;
+  font-weight: 400;
+}
+
+.blog-preview-metadata-title
+{
+  font-size: large;
+  font-weight: 700;
+}
+
+.blog-preview-metadata-desc
+{
+  font-size: small;
+  font-weight: 400;
+}
+
+@media screen and (max-width: 540px) {
+  .blog-preview-metadata-desc
+  {
+    font-size: small;
+  }
+  .blog-preview-metadata-title
+  {
+    font-size: medium;
+    font-weight: 500;
+  }
 }
