--- a/tumblingtoads/src/index.css
+++ b/tumblingtoads/src/index.css
@@ -22,9 +22,7 @@ code {
 .site-title
 {
   color: gray;
-  display: inline-block;
-  width: 50%;
-  padding-left: 20%;
+  width: auto;
   align-self: center;
 }
 
@@ -37,29 +35,7 @@ code {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-content: stretch;
-  row-gap: 30px;
-}
-
-.dropdown {
-  align-self: center;
-  width: 50%;
-  padding-left: 20%;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 260px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  text-align: left;
-  z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
+  align-content: center;
 }
 
 .blog-content {
